--- a/css/HW8.css
+++ b/css/HW8.css
@@ -34,3 +34,12 @@ body {
 	}
 
 }
+
+.glyphicon-star {
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	color:white;
+}
+
+.favorite {
+	color: yellow;
+}
